Module 11 (Dual Registration & Profile Completion) - Done. Created new database named 'lifelink' and reconnected it to the app.