@@ -2,48 +2,45 @@ package com.lifelink.blood_donation.Security;
 
 import com.lifelink.blood_donation.Entities.User;
 import lombok.Getter;
-import lombok.Setter;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.security.oauth2.core.user.OAuth2User;
 
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
+import java.util.Map;
 
 @Getter
-@Setter
-public class UserPrincipal implements UserDetails {
+public class UserPrincipal implements UserDetails, OAuth2User {
 
     private final User user;
+    private Map<String, Object> attributes; // populated only for OAuth2 logins
 
     public UserPrincipal(User user) {
         this.user = user;
     }
 
+    public UserPrincipal(User user, Map<String, Object> attributes) {
+        this.user = user;
+        this.attributes = attributes;
+    }
+
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole().name()));
+        // role is nullable now (unset until Complete Profile) — no authority until then.
+        // The ProfileCompletionFilter, not a role check, is what redirects these users.
+        if (user.getRole() == null) return Collections.emptyList();
+        return Collections.singletonList(new SimpleGrantedAuthority("ROLE_" + user.getRole().name()));
     }
 
-    @Override
-    public String getPassword() {
-        return user.getPassword();
-    }
+    @Override public String getPassword() { return user.getPassword(); }
+    @Override public String getUsername() { return user.getEmail(); }
+    @Override public boolean isAccountNonExpired() { return true; }
+    @Override public boolean isAccountNonLocked() { return true; }
+    @Override public boolean isCredentialsNonExpired() { return true; }
+    @Override public boolean isEnabled() { return true; }
 
-    @Override
-    public String getUsername() {
-        return user.getEmail();
-    }
-
-    @Override
-    public boolean isAccountNonExpired() { return true; }
-
-    @Override
-    public boolean isAccountNonLocked() { return true; }
-
-    @Override
-    public boolean isCredentialsNonExpired() { return true; }
-
-    @Override
-    public boolean isEnabled() { return true; } // verification status handled separately, not here
+    @Override public Map<String, Object> getAttributes() { return attributes; }
+    @Override public String getName() { return user.getEmail(); }
 }
